--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /_Arquivos/COVID-19/time_series_covid19_deaths_global.csv
 /_Arquivos/COVID-19/time_series_covid19_deaths_US.csv
 /_Arquivos/COVID-19/time_series_covid19_recovered_global.csv
+/_Arquivos
